# HERMES-TEAM

./: .gitignore  AGENTS.md  AI_OPERATIONS_MANUAL.md  HERMES_PUBLIC_ARCHITECTURE_REPORT_KO.md  LICENSE  NOTICE.md  README.md  pyproject.toml  run_agent.py  toolsets.py
agent/: agent_init.py  agent_runtime_helpers.py  auxiliary_client.py  chat_completion_helpers.py  codex_responses_adapter.py  codex_runtime.py  context_compressor.py  conversation_loop.py  model_metadata.py  prompt_builder.py  response_language.py  supervisor_codex_bridge.py  supervisor_contract.py  system_prompt.py
cron/: jobs.py  scheduler.py
distribution/: release.json
docs/: HERMES_ARTIFACT_HEALTH_CONTRACT_KO.md  HERMES_SUPERVISOR_OPERATIONS_KO.md  HERMES_TEAM_UPGRADE_KO.md  PUBLIC_EDITION_QUICKSTART_KO.md
extensions/hermes-timeline-code-map/: .gitignore  README.md  pyproject.toml
extensions/hermes-timeline-code-map/deploy/hermes_plugin/timeline-neural-link/: __init__.py  plugin.yaml
extensions/hermes-timeline-code-map/src/hermes_timeline_code_map/: __init__.py  cli.py  code_index.py  mcp_server.py  neural_links.py  roadmap.py  store.py
extensions/hermes-timeline-code-map/tests/: test_neural_link_plugin.py  test_roadmap.py  test_store.py
gateway/: kanban_watchers.py  run.py  shutdown_forensics.py
hermes_cli/: __init__.py  application_service_cli.py  application_services.py  artifact_health.py  banner.py  codex_runtime_plugin_migration.py  config.py  executor_adapter.py  external_cli_adapter.py  free_worker_router.py  gateway.py  kanban.py  kanban_db.py  main.py  oneshot.py  (+11 more)
(+106 files in other folders)
